update: fix Masalah overflow horizontal in mobile version

--- a/src/styles.css
+++ b/src/styles.css
@@ -85,6 +85,10 @@
   * {
     border-color: var(--color-border);
   }
+  html,
+  body {
+    overflow-x: hidden;
+  }
   html {
     scroll-behavior: smooth;
   }
